Add debug info mode solver

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -8,3 +8,5 @@
 	year={1995},
 	school={University of Glasgow}
 }
+
+@article{Shibayama_Yamazaki_Yamauchi_Nakano_2005, title={Efficient Absorbing Layers for the Guided-mode Analysis Using the Imaginary-Distance BPM}, volume={37}, rights={http://www.springer.com/tdm}, ISSN={0306-8919, 1572-817X}, DOI={10.1007/s11082-005-0959-0}, number={9}, journal={Optical and Quantum Electronics}, author={Shibayama, Jun and Yamazaki, Tomohide and Yamauchi, Junji and Nakano, Hisamatsu}, year={2005}, month=jul, pages={855–863}, language={en} }
